# AWESOME-FASTAPI-PROJECT

./: .coveragerc  .env-example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  conftest.py  dao.py  database.py  docker-compose.yaml  docker-compose.yml  mkdocs.yml  models.py  pyproject.toml  pytest.ini  settings.py  test_some.py
.github/workflows/: check-branch-names.yml  testing-with-poetry.yml
app/: constants.py  database.py  main.py  schemas.py  settings.py  shemas.py  trash.py
app/api/: api_router.py  api_router_auth.py  api_router_stories.py  api_router_user.py  mongo_db.py
app/auth/: auth_lib.py  dependencies.py  otp.py  otp_module.py  router_auth.py  schemas.py  security_lib.py
app/bl/: user.py  user_token.py
app/models/: user.py
app/schemas/: schemas_stories.py  schemas_user.py
app/storage/no_sql_storage/: mongo_db.py
app/tasks/: background_emails.py  tasks_fastapi.py
app/templates/: base.html  error_404.html  login.html  login_otp.html  menu.html  register.html  register_otp.html  sing_in_or_sing_up.html
app/templates/web/auth/: qrcode.html  signup.html
app/templates/web/login/: login.html
app/utils/: utils_library.py
app/utils/email/: email_send.py
app/utils/email/custom_solution/: email_custom_utils.py
app/utils/email/email_templates/: email_page.html  email_varify.html
app/utils/email/fastapi_mail_solution/: email_bl.py  email_library.py
app/web/: web_auth.py  web_auth_router.py  web_login_router.py
docs/: action.md  auth.md  db_connection.md  deploy.md  email.md  index.md  services.md  structure.md  used_ports.md
migration/: env.py
migration/versions/: 2023_12_16_2238-5233ff423812_initial.py  2023_12_24_0050-3344682f9bed_initial.py  2024_01_07_1856-bb9531e3330a_init.py  e750895c0f0b_initial.py
nginx/: nginx.conf
tests/: mongo_test.py  test_stories.py
tests/auth/: test_auth.py
tests/stories/: test_stories.py
tests/test_user_routes/: test_user_registration.py
