[tool.poetry]
name = "AWESOME-FASTAPI-PROJECT"
version = "0.1.0"
description = ""
authors = [
    "Yaroslavshym <139383618+Yaroslavshym@users.noreply.github.com>",
    "Vasyl Kartychak https://github.com/smartguy-coder/AWESOME-FASTAPI-PROJECT",
    "Illya Kartychak",
    "Kiril Lypenko",
    "Danylo Soldatenko <dansoldat9@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.104.1"
fastapi-versioning = "0.10.0"
sentry-sdk = "1.37.1"
alembic = "1.12.1"
annotated-types = "0.6.0"
anyio = "3.7.1"
async-timeout = "4.0.3"
asyncpg = "0.29.0"
bcrypt = "4.0.1"
certifi = "2023.11.17"
click = "8.1.7"
dnspython = "2.4.2"
email-validator = "2.1.0.post1"
flake8 = "6.1.0"
ghp-import = "2.1.0"
greenlet = "3.0.1"
h11 = "0.14.0"
httpcore = "1.0.2"
httptools = "0.6.1"
httpx = "0.25.2"
idna = "3.6"
iniconfig = "2.0.0"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
mako = "1.3.0"
markdown = "3.5.1"
markupsafe = "2.1.3"
mccabe = "0.7.0"
mergedeep = "1.3.4"
mkdocs = "1.5.3"
orjson = "3.9.10"
packaging = "23.2"
passlib = "1.7.4"
pathspec = "0.11.2"
platformdirs = "4.0.0"
pluggy = "1.3.0"
psycopg2-binary = "2.9.9"
pycodestyle = "2.11.1"
pydantic = "2.5.2"
pydantic-extra-types = "2.1.0"
pydantic-settings = "2.1.0"
pydantic-core = "2.14.5"
pyflakes = "3.1.0"
pyjwt = "2.8.0"
pyotp = "2.9.0"
pypng = "0.20220715.0"
pytest = "7.4.3"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
python-multipart = "0.0.6"
pyyaml = "6.0.1"
pyyaml-env-tag = "0.1"
qrcode = "7.4.2"
six = "1.16.0"
sniffio = "1.3.0"
sqlalchemy = "2.0.23"
starlette = "0.27.0"
typing-extensions = "4.8.0"
ujson = "5.8.0"
urllib3 = "2.1.0"
uvicorn = "0.24.0.post1"
uvloop = "0.19.0"
watchdog = "3.0.0"
watchfiles = "0.21.0"
websockets = "12.0"



[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mkdocs = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
